first commit on linux terminal

--- a/Medicine/Respiratory.org
+++ b/Medicine/Respiratory.org
@@ -659,5 +659,4 @@ https://img.grepmed.com/uploads/5278/infectiousdiseases-symptoms-tuberculosis-di
  - ESR
  - Urea
  - Electrolytes
- 
-
+** Pleural effusion 
